# ptypy

./: .buildinfo  .clang-format  .coveragerc  .dockerignore  .gitignore  .gitignore~  .gitmodules  .travis.yml  AUTHORS  CONTRIB.rst  Dockerfile  Dockerfile.mamba  LAYOUT  LICENSE  README.md  README.rst  TODO  UPLOAD-TO-PYPY.md  angles_rad.npy  content.html  core_dependencies.yaml  core_dependencies.yml  dependencies_core.yml  dependencies_dev.yml  dependencies_full.yml  diamond_probe.npy  environment.yml  extensions.py  full_dependencies.yaml  full_dependencies.yml  genindex.html  imag_vol_35it.npy  index.html  index.html~  objects.inv  params.json  ptypy_core_dependencies.yml  py-modindex.html  pyproject.toml  real_vol_35it.npy  (+9 more)
_sources/: index.txt
_static/: basic.css  header.css  header.css_t~  sphinxdoc.css
archive/cuda_extension/cuda/: CMakeLists.txt
archive/cuda_extension/cuda/func/: abs2.cu  abs2.h  center_probe.h  clip_complex_magnitudes_to_range.cu  clip_complex_magnitudes_to_range.h  complex_gaussian_filter.cu  difference_map_iterator.h  difference_map_overlap_constraint.cu  difference_map_realspace_constraint.h  difference_map_update_probe.cu  extract_array_from_exit_wave.cu  extract_array_from_exit_wave.h  far_field_error.cu  farfield_propagator.cu  get_difference.h  interpolated_shift.cu  interpolated_shift.h  log_likelihood.cu  log_likelihood.h  norm2.h  renormalise_fourier_magnitudes.cu  scan_and_multiply.cu  sqrt_abs.cu  sum_to_buffer.cu  sum_to_buffer.h
archive/cuda_extension/cuda/splines/: bspline_kernel.cuh  cubicPrefilter2D.cu  cubicPrefilter2D.cuh  cubicPrefilter_kernel.cuh  math_func.cuh
archive/cuda_extension/cuda/tests/: indexing_test.cpp
archive/cuda_extension/cuda/utils/: Complex.h  CudaFunction.cpp  CudaFunction.h  Errors.h  FinalSumKernel.h  GaussianWeights.h  GpuManager.h  Memory.h  Patches.h  ScopedTimer.h
benchmark/: class_benchmarks.py  cufft_vs_reikna.py  model_speed.py  mpi_allreduce_bench.sh  mpi_allreduce_bench_launcher.sh  mpi_allreduce_bench_multinode.sh  mpi_allreduce_speed.py  ptypy_moonflower_script_cupy.py  ptypy_moonflower_script_numpy.py  tiled_vs_atomic.py
cuda/: CMakeLists.txt  README.md
cuda/func/: abs2.cu  abs2.h  addr_info_helpers.cpp  addr_info_helpers.h  center_probe.cu  complex_gaussian_filter.h  difference_map_fourier_constraint.cu  difference_map_fourier_constraint.h  difference_map_iterator.cu  difference_map_overlap_constraint.h  difference_map_realspace_constraint.cu  difference_map_realspace_constraint.h  difference_map_update_object.cu  difference_map_update_object.h  difference_map_update_probe.cu  difference_map_update_probe.h  extract_array_from_exit_wave.cu  extract_array_from_exit_wave.h  far_field_error.cu  far_field_error.h  farfield_propagator.cu  farfield_propagator.h  get_difference.cu  get_difference.h  interpolated_shift.cu  interpolated_shift.h  log_likelihood.cu  log_likelihood.h  mass_center.cu  mass_center.h  norm2.cu  norm2.h  realspace_error.cu  realspace_error.h  renormalise_fourier_magnitudes.cu  renormalise_fourier_magnitudes.h  scan_and_multiply.cu  scan_and_multiply.h  sqrt_abs.cu  sum_to_buffer.cu  (+1 more)
cuda/splines/: README.md
cuda/tests/: gaussian_weights_test.cpp
cuda/utils/: CudaFunction.h  Errors.h  GpuManager.cu  GpuManager.h  Indexing.h  Memory.cpp  Memory.h  Timer.h
cufft/: dependencies.yml  extensions.py  setup.py
deprecated/: data_structure.py  illumination_old.py
doc/: Makefile  README_sphinx  clip_pngs.py  conf.py  content.rst  dummy_module.py  index.rst  make.bat  parameters.rst  parameters2rst.py  script2rst.py  tmp2rst.py  version.py
docs/: .gitignore  conf.py  index.rst
extra/: astra_downsampling.py  moonflower_as_json_schema.py
jupyter-notebooks/: plotclient.ipynb
mods/: DM_object_regul.py  DM_pycuda_object_regul.py  moonflower_test_dm_object_regul.py
ptypy/: __init__.py  __init__.py~  version.py
ptypy-data/: README.md
resources/: __init__.py
rst/: concept.html  data_management.html  getting_started.html  math.html  parameters.html  ptypy.core.html  ptypy.debug.html  ptypy.engines.html  ptypy.experiment.html  ptypy.html  ptypy.io.html  ptypy.resources.html  ptypy.simulations.html  ptypy.utils.html
rst_templates/: engineprimer.html  mathtest.html
scripts/: ptypy.csv2cp  ptypy.focussing  ptypy.h5info  ptypy.inspect  ptypy.new  ptypy.plot  ptypy.plot_probes  ptypy.plotclient  ptypy.run  ptypy_plot.py
templates/: 3dbpp_prep_and_run.py  bragg_display_field_of_view.py  bragg_field_of_view.py  bragg_prep_and_run.py  contrast_zmq_run.py  i13_merlin_plugin_example_01022015.py  ia_server.py  livescan_SiemensStar_KB.py  make_sample_ptyd.py  minimal2.py  minimal_DMGpu_iterate_benchmark.py  minimal_DMNpy_iterate_benchmark.py  minimal_dm_test.py  minimal_load_and_run.py  minimal_numpy_DM_test_4096x4096.py  minimal_numpy_DM_test_64x64.py  minimal_numpy_ML_test.py  minimal_numpy_test.py  minimal_prep_and_run.py  minimal_prep_and_run_DM_ML_pycuda.py  minimal_prep_and_run_DM_delayed.py  minimal_prep_and_run_DM_delayed_pycuda.py  minimal_prep_and_run_DM_local.py  minimal_prep_and_run_DM_object_regul.py  minimal_prep_and_run_DM_ocl.py  minimal_prep_and_run_DM_pycuda.py  minimal_prep_and_run_DM_pycuda_stream.py  minimal_prep_and_run_DM_serial.py  minimal_prep_and_run_DR_pycuda.py  minimal_prep_and_run_DR_pycuda_stream.py  minimal_prep_and_run_DR_serial.py  minimal_prep_and_run_ML.py  minimal_prep_and_run_ML_Gaussian.py  minimal_prep_and_run_ML_Gaussian_Huber.py  minimal_prep_and_run_ML_Poisson.py  minimal_prep_and_run_ML_pycuda.py  minimal_prep_and_run_ML_pycuda_Gaussian_Huber.py  minimal_prep_and_run_ML_serial.py  minimal_prep_and_run_blockmodel.py  minimal_prep_and_run_ePIE.py  (+55 more)
test/: utils.py
test_data/: README.md
treasure/: minimal.py  old_parameters.py  paths_old.py  plot_client_20150205.py  plot_client_minimal.py  propagation.py  readme.txt  sample_old.py  template.py  xy.py
tutorial/: .nfs00000000000e62b300000263  bragg3d_initial.py  explore.py  minimal_script.py  ownengine.py  plot.py  ptypyclasses.py  ptypyclasses.rst  scipt2rst.py  simupod.py  (+1 more)
(+1057 files in other folders)
